test/files/neg/t963b.check
t963b.scala:25: error: type mismatch;
 found   : B.type
 required: AnyRef{val y: A}
  B.f(B)
      ^
one error found
